kubernetes/k3s-01/workloads/navidrome/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: docker.io/deluan/navidrome:0.64.2@sha256:38dc2727bfcfd5ede290f8ada114fc90368146f265ae4701ddddbcbe2a44ee52
          startupProbe:
            httpGet:
              path: /app
              port: 4533
          resources:
            requests:
              cpu: 5m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: navidrome-data-encrypted
              mountPath: /data
            - name: navidrome-music
              mountPath: /music
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: navidrome-data-encrypted
          persistentVolumeClaim:
            claimName: navidrome-data-encrypted
        - name: navidrome-music
          persistentVolumeClaim:
            claimName: navidrome-music
            readOnly: true
