kubernetes/k3s-01/workloads/navidrome/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4533
      targetPort: 4533
      protocol: TCP
  selector:
    app: navidrome
