kubernetes/k3s-01/workloads/navidrome/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  namespace: navidrome
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`navidrome.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: navidrome
          name: navidrome-ipallowlist
      services:
        - name: navidrome
          kind: Service
          port: 4533
          scheme: http
  tls:
    secretName: navidrome-certificate
